temporary fix for verso/recto pair of MU-ASSes

--- a/finite.tex
+++ b/finite.tex
@@ -234,10 +234,7 @@ In \Cref{DescentFromHFpToHZp}, we discussed translating from the algebraic desce
 Most of the homology theories we will discuss satisfy {\CH} and {\FH}.  For example, \(\HFtwo P\) has this property: there is only one possible algebraic map \(\F_2 \to \mathcal A_*\), so {\FH} is necessarily satisfied.  Our work in \Cref{TheSteenrodAlgebraSection}\footnote{The reader should spend a moment contrasting our two approaches to the definition of \(\context{\HFtwo}(X)\).  Previously, we assumed that \(X\) was finite type and worked with cohomology---but under exactly this assumption, the cohomology of \(X\) can always be written as the homology of \(Y\) for another finite spectrum satisfying \(X = DY\).} thus grants us access to a description of the context for \(\HFtwo\):\footnote{This is a bit glib: this gives a presentation of the \emph{even} part of the context for \(\HFtwo P\), and the ``\(\G_a\)'' in the formula is \(\CP^\infty_{\HFtwo}\) rather than \(\RP^\infty_{\HFtwo}\).  This sleight of hand abuts the discussion of Bocksteins in \Cref{ASSForLKdS}.} \[\context{\HFtwo P} = \Spec \F_2 \mmod \InternalAut{\G_a}.\]
 \end{example}
 
-\begin{example}\label{ContextOfMUPExample}
-The context for \(\MUP\) is considerably more complicated, but Quillen's theorem can be equivalently stated as giving a description of it.  Quillen's theorem on its face gives an equivalence \(\Spec \MUP_0 \cong \moduli{fgl}\), but in \Cref{OrientationsOnEAndMU} we also gave a description of \(\Spec \MUP_0 \MUP\): it is the moduli of pairs of formal group laws equipped with an invertible power series intertwining them.  Altogether, this presents \(\context{\MUP}\) as the moduli of formal groups: \[\context{\MUP} \simeq \moduli{fg} := \moduli{fgl} \mmod \underline{\Aut}(\A^1),\] where \(\underline{\Aut}(\A^1)\) is the moduli of invertible power series.  We include a picture of the \(p\)--localization of the \(MU\)--Adams \(E_2\)--page in \Cref{ANSS2Figure} and \Cref{ANSS3Figure}.  In view of \Cref{WarningAboutStacks}, there is an important subtlety about the stack \(\moduli{fg}\): an \(R\)--point is a functor on affines over \(\Spec R\) which is locally isomorphic to a formal group, but whose local isomorphism \emph{may not patch} to give a global isomorphism.  This does not agree, a priori, with the definition of formal group given in \Cref{DefnFormalGps}, where the isomorphism witnessing a functor as a formal variety was expected to be global.  We will address this further in \Cref{CoordinatizbleFGs} below.\footnote{Naumann gives a very pleasant write-up of, among other things, the difference between $\moduli{fg}$ as a simplicial scheme and as a stack~\cite{Naumann}.}
-\end{example}
-
+% NOTE: \afterrectopage can't handle being _exactly on_ a page break.
 \afterrectopage{
 \begin{sidewaysfigure}
 \centering
@@ -250,6 +247,10 @@ The context for \(\MUP\) is considerably more complicated, but Quillen's theorem
 \caption{A small piece of the \(MU_{(3)}\)--Adams spectral sequence for the sphere, beginning at the second page~\cite[Figure 1.2.19]{RavenelGreenBook}.  North-east lines denote multiplication by \(\alpha_1\) or by \(\beta_1/\alpha_1\), and north-west lines denote \(d_5\)--differentials.  Elements are labeled according to the conventions of \Cref{GreekLetterElements}, and in particular \(\alpha_{i/j}\) is \(3^j\)--torsion.}\label{ANSS3Figure}
 \end{sidewaysfigure}
 }
+
+\begin{example}\label{ContextOfMUPExample}
+The context for \(\MUP\) is considerably more complicated, but Quillen's theorem can be equivalently stated as giving a description of it.  Quillen's theorem on its face gives an equivalence \(\Spec \MUP_0 \cong \moduli{fgl}\), but in \Cref{OrientationsOnEAndMU} we also gave a description of \(\Spec \MUP_0 \MUP\): it is the moduli of pairs of formal group laws equipped with an invertible power series intertwining them.  Altogether, this presents \(\context{\MUP}\) as the moduli of formal groups: \[\context{\MUP} \simeq \moduli{fg} := \moduli{fgl} \mmod \underline{\Aut}(\A^1),\] where \(\underline{\Aut}(\A^1)\) is the moduli of invertible power series.  We include a picture of the \(p\)--localization of the \(MU\)--Adams \(E_2\)--page in \Cref{ANSS2Figure} and \Cref{ANSS3Figure}.  In view of \Cref{WarningAboutStacks}, there is an important subtlety about the stack \(\moduli{fg}\): an \(R\)--point is a functor on affines over \(\Spec R\) which is locally isomorphic to a formal group, but whose local isomorphism \emph{may not patch} to give a global isomorphism.  This does not agree, a priori, with the definition of formal group given in \Cref{DefnFormalGps}, where the isomorphism witnessing a functor as a formal variety was expected to be global.  We will address this further in \Cref{CoordinatizbleFGs} below.\footnote{Naumann gives a very pleasant write-up of, among other things, the difference between $\moduli{fg}$ as a simplicial scheme and as a stack~\cite{Naumann}.}
+\end{example}
 
 \begin{example}\label{ContextOfMOPExample}
 The context for \(MOP\), by contrast, is reasonably simple.  \Cref{CalculationOfPiStarMO} shows that the scheme \(\Spec MOP_0\) classifies formal group laws over \(\F_2\) which admit logarithms, so that \(\context{MOP}\) consists of the groupoid of formal group laws with logarithms and isomorphisms between them.  This admits a natural deformation-retraction to the moduli consisting just of \(\G_a\) and its automorphisms,
