fix bad induction index

--- a/finite.tex
+++ b/finite.tex
@@ -723,13 +723,13 @@ In the previous two Lectures, we analyzed the structure of \(\moduli{fg}\) as a 
 Let \(\bar k\) be an algebraically closed field of positive characteristic \(p\).  The height map \[\height\co \pi_0 \moduli{fg}(\bar k) \to \N_{> 0} \cup \{\infty\}\] is a bijection.
 \end{theorem}
 \begin{proof}
-Surjectivity follows from \Cref{EveryPSeriesArises}.  Namely, the \index{formal group!Honda group!law}\textit{\(d\){\th} Honda formal group law} is the \(p\)--typical formal group law over \(k\) determined by \[[p]_{\phi_d}(x) = x^{p^d},\] and it gives a preimage for \(d\).  To show injectivity, we must show that every \(p\)--typical formal group law \(\phi\) over \(\bar k\) is isomorphic to the appropriate Honda group law.  Suppose that the \(p\)--series for \(\phi\) begins \[[p]_\phi(x) = u x^{p^d} +_\phi a x^{p^{d+k}} + \cdots\] for a unit \(u\).  By replacing \(x\) with \(u^{-1/p^d} x\), we may assume that \(u = 1\).  Then, we will construct a coordinate transformation \(g(x) = \sumphi_{j=0}^\infty b_j x^{p^j}\) satisfying
+Surjectivity follows from \Cref{EveryPSeriesArises}.  Namely, the \index{formal group!Honda group!law}\textit{\(d\){\th} Honda formal group law} is the \(p\)--typical formal group law over \(\bar k\) determined by \[[p]_{\phi_d}(x) = x^{p^d},\] and it gives a preimage for \(d\).  To show injectivity, we must show that every \(p\)--typical formal group law \(\phi\) over \(\bar k\) is isomorphic to the appropriate Honda group law.  Suppose that the \(p\)--series for \(\phi\) begins \[[p]_\phi(x) = u x^{p^d} +_\phi a x^{p^{d+\ell}} + \cdots\] for a unit \(u\).  By replacing \(x\) with \(u^{-1/p^d} x\), we may assume that \(u = 1\).  Then, we will construct a coordinate transformation \(g(x) = \sumphi_{j=0}^\infty b_j x^{p^j}\) satisfying
 \begin{align*}
-g(x^{p^d}) & \equiv [p]_\phi(g(x)) & \pmod{x^{p^{d+k} + 1}} \\
-\sumphi_{j=0}^\infty b_j x^{p^{d+j}} & \equiv \left( \sumphi_{j=0}^\infty b_j x^{p^j} \right)^{p^d} +_\phi a \left( \sumphi_{j=0}^\infty b_j x^{p^j} \right)^{p^{d+k}} & \pmod{x^{p^{d+k} + 1}} \\
-\sumphi_{j=0}^\infty b_j x^{p^{d+j}} & \equiv \left( \sum_{j=0}^\infty {}_{(\operatorname{Frob}^d)^* \phi} b_j^{p^d} x^{p^{d+j}} \right) + a x^{p^{d+k}} & \pmod{x^{p^{d+k} + 1}}.
+g([p]_{\phi_d}(x)) & \equiv [p]_\phi(g(x)) & \pmod{x^{p^{d+\ell} + 1}} \\
+\sumphi_{j=0}^\infty b_j x^{p^{d+j}} & \equiv \left( \sumphi_{j=0}^\infty b_j x^{p^j} \right)^{p^d} +_\phi a \left( \sumphi_{j=0}^\infty b_j x^{p^j} \right)^{p^{d+\ell}} & \pmod{x^{p^{d+\ell} + 1}} \\
+\sumphi_{j=0}^\infty b_j x^{p^{d+j}} & \equiv \left( \sum_{j=0}^\infty {}_{(\operatorname{Frob}^d)^* \phi} b_j^{p^d} x^{p^{d+j}} \right) + a x^{p^{d+\ell}} & \pmod{x^{p^{d+\ell} + 1}}.
 \end{align*}
-For \(g\) to be a coordinate transformation, we must have \(b_0 = 1\), and because \(\bar k\) is algebraically closed we can induct on \(j\) to solve for the other coefficients in the series.  The coordinate for \(\phi\) can thus be perturbed so that the term \(x^{p^{d+k}}\) does not appear in the \(p\)--series, and inducting on \(d\) gives the result.
+For \(g\) to be a coordinate transformation, we must have \(b_0 = 1\), and because \(\bar k\) is algebraically closed we can induct on \(j\) to solve for the other coefficients in the series.  The coordinate for \(\phi\) can thus be perturbed so that the term \(x^{p^{d+\ell}}\) does not appear in the \(p\)--series, and inducting on \(\ell\) gives the result.
 \end{proof}
 
 \begin{remark}[{\cite[Remark 11.2]{StricklandFGNotes}}]
