--- a/preamble.tex
+++ b/preamble.tex
@@ -279,6 +279,7 @@
 \newcommand{\BP}{\mathit{BP}}
 \newcommand{\MU}{\mathit{MU}}
 \newcommand{\Tate}{\mathrm{Tate}}
+\newcommand{\LT}{\mathrm{LT}}
 \newcommand{\gl}{\mathit{gl}}
 \newcommand{\GL}{\mathit{GL}}
 \newcommand{\perf}{\mathrm{perf}}
@@ -312,6 +313,7 @@
 \DeclareMathOperator{\Aut}{Aut}
 \DeclareMathOperator{\Def}{Def}
 \DeclareMathOperator{\Pic}{Pic}
+\DeclareMathOperator{\Fact}{Fact}
 \DeclareMathOperator{\Ext}{Ext}
 \DeclareMathOperator{\hAut}{hAut}
 \DeclareMathOperator{\Coord}{Coord}
