--- a/finite.tex
+++ b/finite.tex
@@ -811,7 +811,7 @@ Suppose that \(\height \Gamma < \infty\) for \(\Gamma\) a formal group over \(k\
 \end{theorem}
 
 \begin{remark}[{\cite[Theorem 4.35]{ZinkCartierTheory}}]\label{UnivPropertyOfWittRing}
-The presence of the \index{Witt vectors}\textit{\(p\)--local Witt ring} \(\W_p(k)\) is explained by its universal property: for \(k\) as above and \(R\) an infinitesimal thickening of \(k\), \(\W_p(k)\) has the lifting property\footnote{Rings with such lifting properties are generally called \index{Cohen ring}\textit{Cohen rings}.  In the case that \(k\) is a perfect field of positive characteristic \(p\), the Witt ring \(\W_p(k)\) happens to model a Cohen ring for \(k\).}
+The presence of the \index{Witt vectors}\textit{\(p\)--typical Witt ring} \(\W_p(k)\) is explained by its universal property: for \(k\) as above and \(R\) an infinitesimal thickening of \(k\), \(\W_p(k)\) has the lifting property\footnote{Rings with such lifting properties are generally called \index{Cohen ring}\textit{Cohen rings}.  In the case that \(k\) is a perfect field of positive characteristic \(p\), the Witt ring \(\W_p(k)\) happens to model a Cohen ring for \(k\).}
 \begin{center}
 \begin{tikzcd}
 \W_p(k) \arrow{d} \arrow[densely dotted, "\exists!"]{r} & R \arrow{d} \\
