--- a/quillen.tex
+++ b/quillen.tex
@@ -633,12 +633,7 @@ Given a spectrum \(E\), its \(n\)--fold smash power forms a \index{equivariant s
 A ring spectrum \(E\) equipped with a suite of factorizations \(\mu_n\) satisfying compatibility laws embodying term collection (i.e., \(x^a \cdot x^b = x^{a+b}\)) and iterated exponentiation (i.e., \((x^a)^b = x^{ab}\)) is called an \index{H infty ring spectrum@\(H_\infty\)--ring spectrum}\textit{\(H_\infty\)--ring spectrum}~\cite[Definition I.3.1]{BMMS}.  The composite \[P^{\Sigma_n}_{\mathrm{ext}}f\co (\Susp^\infty_+ X)^{\sm n}_{h\Sigma_n} \xrightarrow{f^{\sm n}_{h\Sigma_n}} E^{\sm n}_{h\Sigma_n} \xrightarrow{\mu_n} E\] is called the \textit{external (total) \(\Sigma_n\)--power operation} applied to \(f\), and the restriction to the diagonal subspace \[P^{\Sigma_n}f \co \Susp^\infty_+ X \sm \Susp^\infty_+ B\Sigma_n \simeq (\Susp^\infty_+ X)_{h\Sigma_n} \xrightarrow{\Delta_{h\Sigma_n}} (\Susp^\infty_+ X)^{\sm n}_{h\Sigma_n} \xrightarrow{P^{\Sigma_n}_{\mathrm{ext}}f} E\] is called the \textit{(internal total) \(\Sigma_n\)--power operation} applied to \(f\).  We can consider it as a cohomology class lying in \[P^{\Sigma_n} f \in E^0(X \times B\Sigma_n).\]
 
 \begin{remark}[{\cite[Definition IV.7.1]{BMMS}}]\label{RestrictingSteenrodOpToBasepoint}
-The optional adjective ``total'' is a reference to the following variant of this construction.  By choosing a class in \(E_* B\Sigma_n\), thought of as a functional on \(E^* B\Sigma_n\), the \index{Kronecker pairing}Kronecker pairing of the total power operation with this fixed class gives rise to a truly internal cohomology operation on \(E^* X\) as in the following composite:
-\begin{center}
-\begin{tikzcd}
-\Susp^\infty_+ X \sm \S \arrow["1 \sm \sigma"]{r} & \Susp^\infty_+ X \sm \Susp^\infty_+ B\Sigma_n \sm E \arrow["P^{\Sigma_n} f \sm 1"]{r} & E \sm E \arrow["\mu"]{r} & E.
-\end{tikzcd}
-\end{center}
+The optional adjective ``total'' is a reference to the following variant of this construction.  By choosing a class \(\sigma \in E_* B\Sigma_n\), thought of as a functional on \(E^* B\Sigma_n\), the \index{Kronecker pairing}Kronecker pairing of the total power operation with this fixed class gives rise to a truly internal cohomology operation on \(E^* X\) as in the following composite: \[\Susp^\infty_+ X \sm \S \xrightarrow{1 \sm \sigma} \Susp^\infty_+ X \sm \Susp^\infty_+ B\Sigma_n \sm E \xrightarrow{P^{\Sigma_n} f \sm 1} E \sm E \xrightarrow{\mu} & E.\]
 \end{remark}
 
 Cohomology classes \(f \in E^{-q}(X)\) lying in degrees \(q \ne 0\) require more care.  Passing to the representative \(f\co \Susp^\infty_+ X \to \S^q \sm E\), the analogous diagram is
