--- a/mo.tex
+++ b/mo.tex
@@ -258,13 +258,13 @@ As presented above, the multiplicative group comes with a natural inclusion \(\m
 \end{remark}
 
 \begin{example}[{cf.\ \Cref{WorkedAlpha2Example}}]\label{Alpha2Example}
-This example showcases the complications that algebraic geometry introduces to this situation, and is meant as discouragement from thinking of the theory of affine group schemes as a strong analogue of the theory of linear complex Lie groups.  It jumps ahead of the present narrative by a fair amount---the reader should feel completely comfortable skipping this Example for now.  We set \(\alpha_2 = \Spec \mathbb{F}_2[x]/(x^2)\), with group scheme structure given by
+This example showcases the complications that algebraic geometry introduces to this situation, and is meant as discouragement from thinking of the theory of affine group schemes as a strong analogue either of the theory of finite groups or of Lie groups.  It jumps ahead of the present narrative by a fair amount---the reader should feel completely comfortable skipping this Example for now.  We set \(\alpha_2 = \Spec \mathbb{F}_2[x]/(x^2)\), with group scheme structure given by
 \begin{align*}
 \alpha_2 \times \alpha_2 &\xrightarrow{\mu} \alpha_2 & x_1 + x_2 & \mapsfrom x, \\
 \alpha_2 & \xrightarrow{\chi} \alpha_2 & -x & \mapsfrom x, \\
 \Spec \F_2 & \xrightarrow{\eta} \alpha_2 & 0 & \mapsfrom x.
 \end{align*}
-This group scheme has several interesting properties which we will merely state, reserving their proofs for \Cref{WorkedAlpha2Example}.
+This finite group scheme of rank \(2\) has several interesting properties which we will merely state, reserving their proofs for \Cref{WorkedAlpha2Example}, but the reader should compare these statements with their analogues for finite groups.
 \begin{enumerate}
 \item \(\alpha_2\) has the same underlying structure ring as \(\mu_2 := \mathbb{G}_m[2]\), the \(2\)--torsion points of \(\mathbb G_m\), but is not isomorphic to it.
 \item There is no commutative group scheme \(G\) of rank four such that \(\alpha_2 = G[2]\).
