--- a/powerops.tex
+++ b/powerops.tex
@@ -98,7 +98,7 @@ Our introduction of \(E_\infty\)--rings also automatically introduces a few inte
 & \CatOf{Spectra} \arrow[shift left=0.4em, "(-) \sm E"]{u} \arrow["\P", shift left=0.4em]{r} & \EinftyRings. \arrow[shift left=0.4em, "(-) \sm E"]{u} \arrow[shift left=0.4em]{l}
 \end{tikzcd}
 \end{center}
-The first functor sends a space \(X\) to its spectrum of \(E\)--cochains \(E^{\Susp^\infty_+ X}\), and the other two functors form a free/forgetful monad\index{descent!monadic} resolving a mapping space in \(\EinftyRings_E\) by a sequence of mapping spaces in \(\CatOf{Modules}_E\).  These kinds of functors are familiar to us from the discussion of contexts in \Cref{StableContextLecture} and \Cref{UnstableContextsSection}, and the recipe applied in those situations gives an analogous story here.  First, there is a natural map \[\CatOf{Spaces}(*, X) \to \EinftyRings_E(E^{X_+}, E),\] which one hopes is an equivalence under (often very strong) hypotheses on \(E\) and on \(X\).\footnote{Mandell has shown this assignment for \(E = \HFp\) is an equivalence on connected \(p\)--complete nilpotent spaces of finite \(p\)--type~\cite{Mandell}.  There is an analogous unpublished theorem of Hopkins and Lurie: this assignment for \(E = E_\Gamma\) is an equivalence if \(X\) is a nilpotent space admitting a finite Postnikov system with at most \(\height \Gamma\) stages and involving only finite groups.  The interested reader should also consider the results of Adams~\cite{AdamsOnCobar}, Goerss~\cite{GoerssChains}, and Blomquist--Harper~\cite{BlomquistHarper}.}  Second, the adjunction gives a mechanism for resolving \(E^{X_+}\), which feeds into a spectral sequence computing this right-hand mapping space.  The functors \(\P\) and \(\P_E\) can be given by explicit formulas:
+The first functor sends a space \(X\) to its spectrum of \(E\)--cochains \(E^{\Susp^\infty_+ X}\), and the other two functors form a free/forgetful monad\index{descent!monadic} resolving a mapping space in \(\EinftyRings_E\) by a sequence of mapping spaces in \(\CatOf{Modules}_E\).  These kinds of functors are familiar to us from the discussion of contexts in \Cref{StableContextLecture} and \Cref{UnstableContextsSection}, and the recipe applied in those situations gives an analogous story here.  First, there is a natural map \[\CatOf{Spaces}(*, X) \to \EinftyRings_E(E^{X_+}, E),\] which one hopes is an equivalence under (often very strong) hypotheses on \(E\) and on \(X\).\footnote{Mandell has shown this assignment for \(E = \HFp\) is an equivalence on connected \(p\)--complete nilpotent spaces of finite \(p\)--type~\cite{Mandell}.  There is an analogous unpublished theorem of Hopkins and Lurie: this assignment for \(E = E_\Gamma\) is an equivalence if \(X\) is a nilpotent space admitting a finite Postnikov system with at most \(\height \Gamma\) stages and involving only finite groups (see~\cite[Conjecture 5.4.14, Corollary 5.4.10.(2)]{HopkinsLurie}).  The interested reader should also consider the results of Adams~\cite{AdamsOnCobar}, Goerss~\cite{GoerssChains}, and Blomquist--Harper~\cite{BlomquistHarper}.}  Second, the adjunction gives a mechanism for resolving \(E^{X_+}\), which feeds into a spectral sequence computing this right-hand mapping space.  The functors \(\P\) and \(\P_E\) can be given by explicit formulas:
 \begin{align*}
 \P(X) & = \bigvee_{j=0}^\infty X^{\sm j}_{h\Sigma_j}, &
 \P_E(M) & = \bigvee_{j=0}^\infty M^{\sm_E j}_{h\Sigma_j}.
