--- a/sigma.tex
+++ b/sigma.tex
@@ -794,8 +794,8 @@ The scheme \(\Spec A_*\) models \(\InternalHom{FormalGroups}(\G_a^{\sm 2}, \Gm)\
 We can describe the \(\F_p\)--scheme \(\InternalHom{FormalGroups}(\G_a^{\sm 2}, \Gm)\) completely explicitly:
 \begin{center}
 \begin{tikzcd}[row sep=1em]
-(a_{mn})_{m, n} \arrow[|->]{r} & \prod_{m < n} \operatorname{texp}\left(a_{mn}(x^{p^m} y^{p^n} - x^{p^n} y^{p^m})\right) \\
-\Spec \F_p[a_{mn} \mid m < n] / (a_{mn}^p) \arrow{r}{\cong} & \InternalHom{FormalGroups}(\G_a^{\sm 2}, \Gm),
+\Spec \F_p[a_{mn} \mid m < n] / (a_{mn}^p) \arrow{r}{\cong} & \InternalHom{FormalGroups}(\G_a^{\sm 2}, \Gm) \\
+(a_{mn})_{m, n} \arrow[|->]{r} & \prod_{m < n} \operatorname{texp}\left(a_{mn}(x^{p^m} y^{p^n} - x^{p^n} y^{p^m})\right),
 \end{tikzcd}
 \end{center}
 where \(\operatorname{texp}(t) = \sum_{j=0}^{p-1} t^j / j!\) is the truncated exponential series.  It is easy to check that this ring of functions agrees with \(A^*\), and it requires hard work (although not much creativity) to check the remainder of the statement: that \(e \circ \hat \Pi_3\) factors through \(\Spec A_*\) and that the factorization is an isomorphism.
