--- a/mo.tex
+++ b/mo.tex
@@ -24,7 +24,7 @@ Our goal is a sequence of theorems about the unoriented bordism spectrum \(MO\).
 For a spherical bundle \(S^{n-1} \to \xi \to X\), its \textit{Thom space} is given by the cofiber \[\xi \to X \xrightarrow{\text{cofiber}} T_n(\xi).\]
 \end{definition}
 \begin{proof}[``Proof'' of definition]
-Recall the more classical construction of the Thom space: take the associated disk bundle by gluing an \(n\)--disk fiberwise, and add a point at infinity by collapsing \(\xi\): \[T_n(\xi) = (\xi \widehat\cup_{S^{n-1}} D^n)^+.\]  To compare this with the cofiber definition, note that the mapping cylinder on \(\xi \to X\) can be taken to be contained in the thickening of \(\xi\) to an \(n\)--disk bundle.  The cofiber of the inclusion into the mapping cylinder then corresponds exactly to the extension to a disk bundle and the introduction of a point at infinity.
+Recall the more classical construction of the Thom space: take the associated disk bundle by gluing an \(n\)--disk fiberwise, and add a point at infinity by collapsing \(\xi\): \[T_n(\xi) = (\xi \mathbin{\widehat\cup}_{S^{n-1}} D^n)^+.\]  To compare this with the cofiber definition, note that the mapping cylinder on \(\xi \to X\) can be taken to be contained in the thickening of \(\xi\) to an \(n\)--disk bundle.  The cofiber of the inclusion into the mapping cylinder then corresponds exactly to the extension to a disk bundle and the introduction of a point at infinity.
 \end{proof}
 
 Before proceeding, here are two important examples:
