--- a/finite.tex
+++ b/finite.tex
@@ -166,7 +166,14 @@ The \index{descent!object}\textit{descent object} for \(X\) along \(\eta\co \S \
 \end{definition}
 
 \begin{lemma}[{\cite[Theorem 4.4.2.8]{LurieHA}}]
-For \(E\) an \(A_\infty\)--ring spectrum, \(\mathcal D_E(X)\) can be considered as a cosimplicial object in the \(\infty\)--category of \(\CatOf{Spectra}\). \qed
+For \(E\) an \(A_\infty\)--ring spectrum, \(\mathcal D_E(X)\) can be considered as a cosimplicial object in the \(\infty\)--category of \(\CatOf{Spectra}\).\footnote{One can use Dold--Kan to replace this cosimplicial object with the following inverse-sequential object: the fiber sequence \(\overline{E} \to \S \to E\) can be smashed with \(\overline{E}^{\sm j} \sm X\) to produce a diagram
+\begin{center}
+\begin{tikzcd}[ampersand replacement=\&, column sep=1.5em]
+X \arrow{d} \& \overline E \sm X \arrow{d} \arrow{l} \& \arrow{l} \arrow{d} \overline E^{\sm 2} \sm X \& \arrow{l} \cdots \& \arrow{l} \arrow{d} \overline E^{\sm j} \sm X \& \arrow{l} \cdots \\
+E \sm X \& E \sm \overline E \sm X \& E \sm \overline E^{\sm 2} \sm X \& \cdots \& E \sm \overline E^{\sm j} \sm X \& \arrow{l} \cdots.
+\end{tikzcd}
+\end{center}
+This diagram, called the \index{Adams spectral sequence!resolution}\textit{Adams resolution}, has many of the same properties as \(\mathcal D_E(X)\), and since it is sequential there are no requirements placed on \(E\) beyond being a homotopy monoid.} \qed
 \end{lemma}
 
 \begin{definition}\label{DefnOfNilpCompletionAndASS}
