--- a/mo.tex
+++ b/mo.tex
@@ -526,7 +526,7 @@ We use a vertical line to indicate the nontrivial coaction involving \(\xi_1\):
 \end{tikzcd}
 \end{center}
 We can now see what trading maps for cofiber sequences has bought us: mod--\(2\) homology can distinguish the defining sequences for \(C(0)\) and \(C(2)\) by considering their induced extensions of comodules over \(\mathcal A_*\).\footnote{More complicated homotopy elements may require more complicated extensions: for instance, the element \(4 = 2 \cdot 2\) has to be written as a length--\(2\) extension to distinguish it from other elements.}  The Adams spectral sequence bundles this thought process into a single machine:
-\begin{theorem}[{\cite[Definition 2.1.8, Lemma 2.1.16]{RavenelGreenBook}, \cite[Chapter 18]{MosherTangora}}]
+\begin{theorem}[{\cite[Definition 2.1.8, Lemma 2.1.16]{RavenelGreenBook}, \cite[Chapter 18]{MosherTangora}}]\label{HF2AdamsDefinition}
 The \textit{Adams spectral sequence} is convergent and has signature
 \[
 \pushQED{\qed}
@@ -656,7 +656,7 @@ Picking \(M = k\), we have
 \end{proof}
 
 \begin{example}\label{HF2HomologyIsValuedInAutGaEquivarModules}
-In \Cref{TheSteenrodAlgebraSection}, we identified \(\mathcal A_*\) with the ring of functions on the group scheme \(\InternalAut_1(\G_a)\) of \index{formal group!strict isomorphism}strict automorphisms of \(\G_a\), which is defined by the kernel sequence \[0 \to \InternalAut_1(\G_a) \to \InternalAut(\G_a) \to \Gm \to 0.\]  The punchline is that this is analogous to \Cref{HopfAlgebrasFromFiniteGroups} above: the object \(\Cotor_{\mathcal A_*}(\F_2, \HFtwo_* X)\) is thought of as the \index{derived fixed points}``derived fixed points'' of \(\InternalAut_1(\G_a)\) acting on \(\HFtwo_* X\).
+In \Cref{TheSteenrodAlgebraSection}, we identified \(\mathcal A_*\) with the ring of functions on the group scheme \(\InternalAut_1(\G_a)\) of \index{formal group!strict isomorphism}strict automorphisms of \(\G_a\), which is defined by the kernel sequence \[0 \to \InternalAut_1(\G_a) \to \InternalAut(\G_a) \to \Gm \to 0.\]  The punchline is that this is analogous to \Cref{HopfAlgebrasFromFiniteGroups} above: the object \(\Cotor_{\mathcal A_*}(\F_2, \HFtwo_* X)\), which forms the input to the Adams spectral sequence in \Cref{HF2AdamsDefinition}, is thought of as the \index{derived fixed points}``derived fixed points'' of \(\InternalAut_1(\G_a)\) acting on \(\HFtwo_* X\).
 \end{example}
 
 We now give several examples to get a sense of how the Adams spectral sequence behaves.
