--- a/mo.tex
+++ b/mo.tex
@@ -55,7 +55,7 @@ Y \arrow["f"]{rr} \arrow["f^* \xi"']{rd} & & X \arrow["\xi"]{ld} \\
 induce maps \(T_n(f^* \xi) \to T_n(\xi)\), and \(T_n\) is suitably homotopy-invariant. \qed
 \end{lemma}
 
-Next, the spherical subbundle of a vector bundle gives a common source of spherical bundles.  The action of \(O(n)\) on \(\R^n\) preserves the unit sphere, and hence gives a map \(O(n) \to GL_1 S^{n-1}\).  These are maps of topological groups, and the block--inclusion maps \(i^n\co O(n) \to O(n+1)\) commute with the suspension map \(GL_1 S^{n-1} \to GL_1 S^n\).  In fact, much more can be said:
+Next, the spherical subbundle of a vector bundle gives a common source of spherical bundles.  The action of \(O(n)\) on \(\R^n\) preserves the unit sphere, and hence gives a map \(O(n) \to GL_1 S^{n-1}\).  These are maps of topological groups, and the block--inclusion maps \(O(n) \to O(n+1)\) commute with the suspension map \(GL_1 S^{n-1} \to GL_1 S^n\).  In fact, much more can be said:
 \begin{lemma}\label{JIsMonoidal}
 The block--sum maps \(O(n) \times O(m) \to O(n+m)\) are compatible with the join maps \(GL_1 S^{n-1} \times GL_1 S^{m-1} \to GL_1 S^{n+m-1}\). \qed
 \end{lemma}
