--- a/preamble.tex
+++ b/preamble.tex
@@ -5,6 +5,7 @@
 \usepackage{geometry}
 \geometry{paperwidth=6in,paperheight=9in}
 
+
 %%% Created by texsupport 20/09/2017
 
 \makeatletter
@@ -82,7 +83,7 @@
 % \usepackage[scaled]{helvet} % ss
 % \usepackage{courier} % tt
 % \normalfont
-% \usepackage[T1]{fontenc}
+\usepackage[T1]{fontenc}
 
 \usepackage{newtxtext,newtxmath}
 
